# libedi

./: .cvsignore  ChangeLog  LICENSE  Makefile.am  README  autogen.sh  build.c  configure.ac  libedi.h  p_libedi.h  parse.c  test1.c
include/: Makefile.am  libedi.h
libedi/: .cvsignore  Makefile.am  build.c  detect.c  edifact.c  edifact.h  init.c  p_libedi.h  parse.c  stringpool.c  tradacoms.h  x12.h
tests/: .cvsignore  Makefile.am  run-tests.sh  test-1.c  test-2.c  test-3.c
